--- a/src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http_api_client/BUILD
+++ b/src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http_api_client/BUILD
@@ -7,6 +7,9 @@ java_library(
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/configuration/eidas/proxy",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/eidasidentity/identity",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/logmasker",
+        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http_api_client/variable_detection/storage",
+        "//src/libraries/agent-storage",
         "//src/tink_backend_libs:aggregation_agent_api_client",
+        "@aggregation//:com_google_guava_guava",
     ],
 )
