--- a/.charts/tink-backend-aggregation/templates/deployment.yaml
+++ b/.charts/tink-backend-aggregation/templates/deployment.yaml
@@ -35,44 +35,32 @@ spec:
       - key: node-role.kubernetes.io/spot-worker
         effect: NoSchedule
         operator: Exists
+
       {{- if not (eq "local" .Values.Cluster) }}
       affinity:
         podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+            - weight: 100
+              podAffinityTerm:
+                topologyKey: "failure-domain.beta.kubernetes.io/zone"
+                labelSelector:
+                  matchLabels:
+                    app: aggregation-service
           {{- if eq .Values.Environment "staging" }}
+            - weight: 100
+              podAffinityTerm:
+                topologyKey: "kubernetes.io/hostname"
+                labelSelector:
+                  matchLabels:
+                    app: aggregation-service
+          {{ else }}
           requiredDuringSchedulingIgnoredDuringExecution:
             - topologyKey: "kubernetes.io/hostname"
               labelSelector:
                 matchLabels:
                   app: aggregation-service
           {{- end }}
-          {{- if eq .Values.Environment "production" }}
-          preferredDuringSchedulingIgnoredDuringExecution:
-          - weight: 100
-            podAffinityTerm:
-              topologyKey: "kubernetes.io/hostname"
-              labelSelector:
-                matchLabels:
-                  app: aggregation-service
-          {{- end }}
-        nodeAffinity:
-          preferredDuringSchedulingIgnoredDuringExecution:
-          - weight: 1
-            preference:
-              matchExpressions:
-              - key: node-role.kubernetes.io/spot-worker
-                operator: Exists
-          {{- if .Values.nodeZones }}
-          requiredDuringSchedulingIgnoredDuringExecution:
-            nodeSelectorTerms:
-            - matchExpressions:
-              - key: "failure-domain.beta.kubernetes.io/zone"
-                operator: In
-                values:
-                {{- range $zone := .Values.nodeZones }}
-                - "{{ $zone }}"
-                {{- end }}
-          {{- end }}
-        {{- end }}
+      {{- end }}
 
       securityContext:
         runAsNonRoot: true
