--- a/.charts/tink-backend-aggregation-agents/templates/payments/alerts.yaml
+++ b/.charts/tink-backend-aggregation-agents/templates/payments/alerts.yaml
@@ -24,6 +24,21 @@ spec:
         summary: Transfer success rate is below 50% actual % is <{ $value }> for <{ $labels.className }> the last 1h. More than 5 attempts.
         tags: <{ $labels.className }> , *#payments*
 
+    - alert: TransferCancelledRateVeryHigh
+      expr: |
+        # Cancelled transfer outcomes above 90%
+        (sum by(className) (increase(tink_agent_transfer_total{ market="SE", provider_type!="test", outcome=~"cancelled"}[1h]))
+          / sum by(className) (increase(tink_agent_transfer_total{provider_type!="test"}[1h]))) > 0.9
+        # # At least this many attempts
+        and sum by(className) (increase(tink_agent_transfer_total{provider_type!="test"}[1h])) > 5
+      labels:
+        severity: urgent
+        priority: P3
+        who: payments-connectivity
+      annotations:
+        description: Check overall trend for this provider to assess the impact. https://grafana.global-production.tink.network/d/XvmDe8YMz/payments-overview-dashboard?orgId=1
+        summary: Threshold exceed for ( <{ $labels.className }> ) for transfers with outcome ( <{ $labels.outcome }> ).
+
     {{- if .Values.Environment }}
     {{- if eq .Values.Environment "production" }}
     - alert: TransferFailedOutcomeThresholdIsPassedForSwedenTier2Banks
