--- a/.charts/tink-backend-aggregation-agents/templates/fr/alerts.yaml
+++ b/.charts/tink-backend-aggregation-agents/templates/fr/alerts.yaml
@@ -243,6 +243,8 @@ spec:
         count(sum_over_time(tink_agent_login_total{action="login",outcome="unavailable", market="FR"}[12h])) BY (className,provider)
         # All login attempts the last 12 hours
           / count(sum_over_time(tink_agent_login_total{action="login", market="FR", provider_type!="test"}[12h])) BY (className,provider) > 0.99
+        # At least this many attempts.
+        and count(sum_over_time(tink_agent_login_total{action="login",outcome="unavailable", market="FR"}[12h])) BY (className,provider) > 1
       for: 15m
       labels:
         severity: urgent
