--- a/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/es/banks/sabadell/BUILD
+++ b/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/es/banks/sabadell/BUILD
@@ -31,6 +31,7 @@ java_library(
         "//third_party:commons_httpclient_commons_httpclient",
         "//third_party:commons_io_commons_io",
         "//third_party:io_vavr",
+        "//third_party:lombok_libs",
         "//third_party:org_apache_commons_commons_lang3",
         "//third_party:org_apache_httpcomponents_httpclient",
         "//third_party:org_apache_httpcomponents_httpcore",
