--- a/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/es/banks/santander/BUILD
+++ b/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/es/banks/santander/BUILD
@@ -28,6 +28,7 @@ java_library(
         "//third_party:com_google_inject_guice",
         "//third_party:com_sun_jersey_jersey_core",
         "//third_party:commons_httpclient_commons_httpclient",
+        "//third_party:lombok_libs",
         "//third_party:org_apache_httpcomponents_httpcore",
         "//third_party:org_json_json",
         "//third_party:org_slf4j_slf4j_api",
