--- a/src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/consent/ukob/BUILD
+++ b/src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/consent/ukob/BUILD
@@ -1,5 +1,5 @@
 java_library(
-    name = "uk",
+    name = "ukob",
     srcs = glob(["**/*.java"]),
     visibility = ["//visibility:public"],
     deps = [
