--- a/src/libraries/discovery/src/main/java/se/tink/libraries/discovery/BUILD
+++ b/src/libraries/discovery/src/main/java/se/tink/libraries/discovery/BUILD
@@ -15,5 +15,6 @@ java_library(
         "@aggregation//:com_fasterxml_jackson_core_jackson_annotations",
         "@aggregation//:com_fasterxml_jackson_core_jackson_databind",
         "@aggregation//:com_google_guava_guava",
+        "@aggregation//:org_apache_zookeeper_zookeeper_jute",
     ],
 )
