--- a/src/aggregation/service/src/test/java/se/tink/backend/aggregation/service/utils/BUILD
+++ b/src/aggregation/service/src/test/java/se/tink/backend/aggregation/service/utils/BUILD
@@ -7,6 +7,7 @@ java_library(
     ],
     deps = [
         "//third_party:lombok_plugin",
+        "@aggregation//:com_fasterxml_jackson_core_jackson_core",
         "@aggregation//:com_fasterxml_jackson_core_jackson_databind",
         "@aggregation//:com_google_guava_guava",
         "@aggregation//:commons_io_commons_io",
